# kwin-effect-test-damage

./: CMakeLists.txt  kwin-effect-test-damage.kdev4
src/: CMakeLists.txt  TestDamage.cpp  TestDamage.h  test_damage.desktop
